--- a/app/index.html
+++ b/app/index.html
@@ -8,85 +8,27 @@
 		<meta name="description" content="tbd" />
 		<meta name="keywords" content="tbd" />
 
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<!--[if lte IE 8]><script src="assets/css/ie/html5shiv.js"></script><![endif]-->
 
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/init.js"></script>
 
-		<script src="js/paste.js"></script>
-		<script src="js/sweet-alert.min.js"></script>
+		<script src="assets/js/paste.js"></script>
+		<script src="assets/js/sweet-alert.min.js"></script>
 
 		<script src="http://emitter.pasting.io/socket.io/socket.io.js"></script>
 
-		<script text="text/javascript">
-		var connected = false;
+		<link rel="stylesheet" href="assets/css/skel.css" />
+		<link rel="stylesheet" href="assets/css/style.css" />
+		<link rel="stylesheet" href="assets/css/style-wide.css" />
 
-		$(document).ready(function() 
-		{
-			$header = $('#header');
-			$strInput = $('#pastingStr');
-			$email    = $('#email');
-			$pastingButon = $('#pastingButton');
-			$cmdSpan = $('#cmd');
-			$pasteBox = $('#pasteBox');
-			$realTimeBtn = $('#realTimeBtn');
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie/v9.css" /><![endif]-->
 
-			var socket = io.connect('http://emitter.pasting.io:8080');
-
-			if (navigator.appVersion.indexOf("Mac") != -1) {
-				$cmdSpan.html('⌘CMD');
-				$pasteBox.attr('title', 'Press ⌘CMD+V on your keyboard to paste a text from your clipboard');
-			}
-
-			$header.pastableNonInputable().on('pasteText', function(ev, data) {
-				$strInput.val(data.text);
-				$pastingButon.click();
-			});
-
-			$strInput.on('keyup', function () {
-				if (connected) {
-					console.log('Emitted');
-					socket.emit('send_data', {username: $email.val(), text: $strInput.val()});
-				}
-			});
-
-			$realTimeBtn.on('click', function () {
-				if (!connected) {
-					if ($email.val() != '') {
-						connected = true;
-						$(this).css('background', "#67A749");
-						swal("Use the follow Url to share your text in real time!", "http://pasting.io/" + $email.val(), "success");
-					} else {
-						swal("Error!", "Please, fill the username field to share your text", "error");
-					}
-				} else {
-					connected = false;
-					$(this).css('background', "#E04646");
-				}
-				return false;
-			});
-			
-			socket.on('new_client', function(username) {
-				if (connected) {
-					console.log('Emitted new client connected');
-					socket.emit('send_data', {username: $email.val(), text: $strInput.val()});
-				}
-			});
-		});
-		</script>
-
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-
-		<link rel="stylesheet" href="css/sweet-alert.css" />
-		<link rel="stylesheet" href="css/app.css" />
+		<link rel="stylesheet" href="assets/css/sweet-alert.css" />
+		<link rel="stylesheet" href="assets/css/app.css" />
 	</head>
 
 	<body>
@@ -94,197 +36,68 @@
 		<script src="http://underscorejs.org/underscore-min.js"></script>
 		<script src="http://backbonejs.org/backbone-min.js"></script>
 
-		<script id="homeTemplate" type="text/template">
-			<!-- Default Header -->
-			<section id="header" class="dark">
-				<header>
-					<h1>PASTING.IO</h1>
-					<p>Paste and share your text. Fast, free and real time support</p>
-					<p></p>
-					<div class="center pasteBox" title="Press CONTROL+V on your keyboard to paste a text from your clipboard'" id="pasteBox">
-					 	<p>PRESS <span class="olights" id="cmd">CONTROL</span> + <span class="olights">V</span></span> </p>
-	    			</div>
-				</header>
-				<footer>
-					<a href="#mainFeatures" class="button scrolly">Pasting Features ?</a>
-					<a href="#pasteText" class="button scrolly" id="pastingButton">or Type and share !</a>
-				</footer>
-			</section>
-		</script>
+		<script src="assets/js/templates.js"></script>
 
-		<script id="userTemplate" type="text/template">
-
-			<section class="main">
-				<header>
-					<div class="container">
-						<h2>PASTING.IO</h2>
-						<p>Paste and share your text. Fast, free and real time support</p>
-						<p id="textArea"></p>
-					</div>
-				</header>
-				<div class="content style1 dark">
-					<div class="container">
-						<section>
-							<header>
-								<h3>Pasting Cloud history: <span id="userSpan"> <%= user %> </span></h3>
-							</header>
-							<div class="table-wrapper">
-								<table class="default">
-									<thead>
-										<tr>
-											<th>ID</th>
-											<th>Name</th>
-											<th>Description</th>
-											<th>Action</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>00001</td>
-											<td>Lorem ipsum dolor</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>Delete</td>
-										</tr>
-										<tr>
-											<td>00002</td>
-											<td>Sit amet nullam</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>Delete</td>
-										</tr>
-										<tr>
-											<td>00003</td>
-											<td>Feugiat felis viverra</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>Delete</td>
-										</tr>
-										<tr>
-											<td>00004</td>
-											<td>Sagittis enim felis</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>Delete</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</section>
-					</div>
-				</div>
-			</section>
-		</script>
-
-		<script id="sharedTemplate" type="text/template">
-			<!-- mainFeatures -->
-			<section id="mainFeatures" class="main">
-				<header>
-					<div class="container">
-						<h2>PASTING MAIN FEATURES</h2>
-						<p>Comparte texto entre diferentes dispositivos y colegas de manera sensilla. <br />
-						Ya no más auto-emails. Tu clipboard al mundo en un solo click</p>
-					</div>
-				</header>
-				<div class="content dark style1 featured">
-					<div class="container">
-						<div class="row">
-							<div class="4u">
-								<section>
-									<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
-									<header>
-										<h3>Fast & Free</h3>
-									</header>
-									<p>Texto descri</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section>
-									<span class="feature-icon"><span class="icon fa-cloud"></span></span>
-									<header>
-										<h3>Cloud & Real Time</h3>
-									</header>
-									<p>Texto descri</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section>
-									<span class="feature-icon"><span class="icon fa-slideshare"></span></span>
-									<header>
-										<h3>By Nerds, for Nerds </h3>
-									</header>
-									<p>Texto descri</p>
-								</section>
-							</div>
-						</div>
-						<div class="row">
-							<div class="12u">
-								<footer>
-									<a href="#pasteText" class="button scrolly">Pasting Now !</a>
-								</footer>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-		
-			<!-- pastingSection (pasteText) -->
-			<section id="pasteText" class="main">
-				<header>
-					<div class="container">
-						<h2>SHARE YOUR TEXT </h2>
-						<h2>or EMIT IN REAL TIME </h2>
-					</div>
-				</header>
-				<div class="content style4 featured">
-					<div class="container 75%">
-						<form method="post" action="#" name="pastingForm">
-							<div class="row 50%">
-								<div class="6u"><input type="text" name="email" placeholder="Enter an username, email or secret phrase" id="email" required /></div>
-								<div class="6u"><input type="text" placeholder="Set password (Optional)" /></div>
-							</div>
-							<div class="row 50%">
-								<div class="12u"><textarea placeholder="Paste or type your text!" id="pastingStr" required></textarea></div>
-							</div>
-							<div class="row">
-								<div class="12u">
-									<ul class="actions">
-										<li><input type="submit" class="button" value="Share Now!" /></li>
-										<li><input type="submit" class="button realTime" value="Real Time!" id="realTimeBtn" /></li>
-										<li><input type="reset" class="button alt" value="Clear Text " /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</section>
-
-			<!-- ourTeam -->
-			<section id="ourTeam" class="main">
-				<div class="content dark style3">
-					<div class="container">
-						<h2>OUR TEAM</h2>
-						<p>Breve descripción de la filosfia/historia del equipo y circulos centrados con las imagenes de c/u<br /></p>
-					</div>
-				</div>
-			</section>
-
-			<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-				</ul>
-				<div class="copyright">
-					<ul class="menu">
-						<li>&copy; JSCLOUD. All rights reserved.</li><li><a href="http://pasting.io">PASTING.IO</a></li>
-					</ul>
-				</div>
-			</section>
-		</script>
 
 		<script text="text/javascript">
+			var connected = false;
 
-			var sharedTemplate = _.template( $("#sharedTemplate").html());
+			function getTemplate(templatePath, data) {
+        		return window['JST'][templatePath](data);
+    		}
+
+			$(document).ready(function() 
+			{
+				$header = $('#header');
+				$strInput = $('#pastingStr');
+				$email    = $('#email');
+				$pastingButon = $('#pastingButton');
+				$cmdSpan = $('#cmd');
+				$pasteBox = $('#pasteBox');
+				$realTimeBtn = $('#realTimeBtn');
+
+				var socket = io.connect('http://emitter.pasting.io');
+
+				if (navigator.appVersion.indexOf("Mac") != -1) {
+					$cmdSpan.html('⌘CMD');
+					$pasteBox.attr('title', 'Press ⌘CMD+V on your keyboard to paste a text from your clipboard');
+				}
+
+				$header.pastableNonInputable().on('pasteText', function(ev, data) {
+					$strInput.val(data.text);
+					$pastingButon.click();
+				});
+
+				$strInput.on('keyup', function () {
+					if (connected) {
+						console.log('Emitted');
+						socket.emit('send_data', {username: $email.val(), text: $strInput.val()});
+					}
+				});
+
+				$realTimeBtn.on('click', function () {
+					if (!connected) {
+						if ($email.val() != '') {
+							connected = true;
+							$(this).css('background', "#67A749");
+							swal("Use the follow Url to share your text in real time!", "http://pasting.io/" + $email.val(), "success");
+						} else {
+							swal("Error!", "Please, fill the username field to share your text", "error");
+						}
+					} else {
+						connected = false;
+						$(this).css('background', "#E04646");
+					}
+					return false;
+				});
+				
+				socket.on('new_client', function(username) {
+					if (connected) {
+						console.log('Emitted new client connected');
+						socket.emit('send_data', {username: $email.val(), text: $strInput.val()});
+					}
+				});
+			});
 
 			var HomeView = Backbone.View.extend(
 			{
@@ -293,9 +106,8 @@
 					this.render();
 				},
 				render: function(){
-					var template = _.template( $("#homeTemplate").html());
-					this.$el.html(template);
-					this.$el.append(sharedTemplate);
+					this.$el.html(getTemplate('templates/home.html'));
+					this.$el.append(getTemplate('templates/shared.html'));
 				}
 			});
 
@@ -307,9 +119,8 @@
 				},
 				render: function(userStr){
 					var data = {'user' : userStr};
-					var template = _.template( $("#userTemplate").html());
-					this.$el.html(template(data));
-					this.$el.append(sharedTemplate);
+					this.$el.html(getTemplate('templates/user.html', data));
+					this.$el.append(getTemplate('templates/shared.html'));
 				}
 			});
 
@@ -323,7 +134,7 @@
 						}, 
 						'(:username)'	: function (username) 
 						{ 
-							var socket = io.connect('http://emitter.pasting.io:8080');
+							var socket = io.connect('http://emitter.pasting.io');
 							var user_view = new UserView(username);
 
 							socket.on(username, function(text) {
