--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-
 		<title>PASTING.IO</title>
 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -9,144 +8,29 @@
 		<meta name="keywords" content="tbd" />
 
 		<!--[if lte IE 8]><script src="assets/css/ie/html5shiv.js"></script><![endif]-->
-
-		<script src="assets/js/templates.js"></script>
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/init.js"></script>
-
 		<script src="assets/js/paste.js"></script>
 		<script src="assets/js/sweet-alert.min.js"></script>
-
 		<script src="http://emitter.pasting.io/socket.io/socket.io.js"></script>
 
+		<noscript>
 		<link rel="stylesheet" href="assets/css/skel.css" />
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<link rel="stylesheet" href="assets/css/style-wide.css" />
-
+		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie/v9.css" /><![endif]-->
-
 		<link rel="stylesheet" href="assets/css/sweet-alert.css" />
 		<link rel="stylesheet" href="assets/css/app.css" />
 	</head>
-
+	
 	<body>
-
 		<script src="http://underscorejs.org/underscore-min.js"></script>
 		<script src="http://backbonejs.org/backbone-min.js"></script>
-
-		<script text="text/javascript">
-			var connected = false;
-
-			function getTemplate(templatePath, data) {
-        		return window['JST'][templatePath](data);
-    		}
-
-			$(document).ready(function() 
-			{
-				$header = $('#header');
-				$strInput = $('#pastingStr');
-				$email    = $('#email');
-				$pastingButon = $('#pastingButton');
-				$cmdSpan = $('#cmd');
-				$pasteBox = $('#pasteBox');
-				$realTimeBtn = $('#realTimeBtn');
-
-				var socket = io.connect('http://emitter.pasting.io');
-
-				if (navigator.appVersion.indexOf("Mac") != -1) {
-					$cmdSpan.html('⌘CMD');
-					$pasteBox.attr('title', 'Press ⌘CMD+V on your keyboard to paste a text from your clipboard');
-				}
-
-				$header.pastableNonInputable().on('pasteText', function(ev, data) {
-					$strInput.val(data.text);
-					$pastingButon.click();
-				});
-
-				$strInput.on('keyup', function () {
-					if (connected) {
-						console.log('Emitted');
-						socket.emit('send_data', {username: $email.val().toLowerCase(), text: $strInput.val()});
-					}
-				});
-
-				$realTimeBtn.on('click', function () {
-					if (!connected) {
-						if ($email.val() != '') {
-							connected = true;
-							$(this).css('background', "#67A749");
-							swal("Use the follow Url to share your text in real time!", "http://pasting.io/" + $email.val(), "success");
-						} else {
-							swal("Error!", "Please, fill the username field to share your text", "error");
-						}
-					} else {
-						connected = false;
-						$(this).css('background', "#E04646");
-					}
-					return false;
-				});
-				
-				socket.on('new_client', function(username) {
-					if (connected) {
-						console.log('Emitted new client connected');
-						socket.emit('send_data', {username: $email.val().toLowerCase(), text: $strInput.val()});
-					}
-				});
-			});
-
-			var HomeView = Backbone.View.extend(
-			{
-				el: 'body',
-				initialize: function(){
-					this.render();
-				},
-				render: function(){
-					this.$el.html(getTemplate('templates/home.html'));
-					this.$el.append(getTemplate('templates/shared.html'));
-				}
-			});
-
-			var UserView = Backbone.View.extend(
-			{
-				el: 'body',
-				initialize: function(userStr){
-					this.render(userStr);
-				},
-				render: function(userStr){
-					var data = {"user" : userStr.toLowerCase()};
-					this.$el.html(getTemplate('templates/user.html', data));
-					this.$el.append(getTemplate('templates/shared.html'));
-				}
-			});
-
-			var Router = Backbone.Router.extend (
-				{ 
-					routes: 
-					{ 
-						'' 				: function () 
-						{
-							var home_view = new HomeView();
-						}, 
-						'(:username)'	: function (username) 
-						{ 
-							var socket = io.connect('http://emitter.pasting.io');
-							var user_view = new UserView(username.toLowerCase());
-
-							socket.on(username, function(text) {
-								text = text.replace(/\n/g, "<br />");
-								$('#textArea').html(text);
-							});
-							socket.emit('client_connection', username);
-						} 
-					} 
-				}
-			);
-
-			var routing = new Router();
-			Backbone.history.start();
-		</script>
+		<script src="assets/js/templates.js"></script>
+		<script src="assets/js/app.js"></script>
 	</body>
 </html>
