Grunt compile JS

--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,7 @@
 		<meta name="keywords" content="tbd" />
 
 		<!--[if lte IE 8]><script src="assets/css/ie/html5shiv.js"></script><![endif]-->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/init.js"></script>
-		<script src="assets/js/paste.js"></script>
-		<script src="assets/js/sweet-alert.min.js"></script>
+		<script src="assets/compiled/base.js"></script>
 		<script src="http://emitter.pasting.io/socket.io/socket.io.js"></script>
 
 		<noscript>
@@ -24,13 +19,13 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie/v9.css" /><![endif]-->
 		<link rel="stylesheet" href="assets/css/sweet-alert.css" />
+		<link rel="stylesheet" href="assets/css/progress.css" />
 		<link rel="stylesheet" href="assets/css/app.css" />
 	</head>
-	
+
 	<body>
 		<script src="http://underscorejs.org/underscore-min.js"></script>
 		<script src="http://backbonejs.org/backbone-min.js"></script>
-		<script src="assets/js/templates.js"></script>
-		<script src="assets/js/app.js"></script>
+		<script src="assets/compiled/app.js"></script>
 	</body>
 </html>
