--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="tbd" />
 
 		<!--[if lte IE 8]><script src="assets/css/ie/html5shiv.js"></script><![endif]-->
-		<script src="assets/compiled/base.js"></script>
+		<script src="assets/compiled/base.min.js"></script>
 		<script src="http://emitter.pasting.io/socket.io/socket.io.js"></script>
 
 		<noscript>
@@ -26,6 +26,6 @@
 	<body>
 		<script src="http://underscorejs.org/underscore-min.js"></script>
 		<script src="http://backbonejs.org/backbone-min.js"></script>
-		<script src="assets/compiled/app.js"></script>
+		<script src="assets/compiled/app.min.js"></script>
 	</body>
 </html>
