--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
 		<link rel="stylesheet" href="assets/css/sweet-alert.css" />
 		<link rel="stylesheet" href="assets/css/progress.css" />
 		<link rel="stylesheet" href="assets/css/app.css" />
+		<link rel="stylesheet" href="assets/css/codemirror.css" />
 	</head>
 
 	<body>
