Disable sockets and compiled file

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,9 @@
 
 		<!--[if lte IE 8]><script src="assets/css/ie/html5shiv.js"></script><![endif]-->
 		<script src="assets/compiled/base.min.js"></script>
-		<script src="http://emitter.pasting.io/socket.io/socket.io.js"></script>
+
+		<!-- Socket - real time, disabled, for now -->
+		<!-- <script src="http://emitter.pasting.io/socket.io/socket.io.js"></script> -->
 
 		<noscript>
 		<link rel="stylesheet" href="assets/css/skel.css" />
