--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,6 @@
 		<!--[if lte IE 8]><script src="assets/css/ie/html5shiv.js"></script><![endif]-->
 		<script src="assets/compiled/base.min.js"></script>
 
-		<!-- Socket - real time, disabled, for now -->
-		<!-- <script src="http://emitter.pasting.io/socket.io/socket.io.js"></script> -->
-
 		<noscript>
 		<link rel="stylesheet" href="assets/css/skel.css" />
 		<link rel="stylesheet" href="assets/css/style.css" />
@@ -20,7 +17,11 @@
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie/v9.css" /><![endif]-->
+
 		<link rel="stylesheet" href="assets/css/sweet-alert.css" />
+		<link rel="stylesheet" href="assets/css/vex.css" />
+		<link rel="stylesheet" href="assets/css/vex-theme-default.css" />
+
 		<link rel="stylesheet" href="assets/css/progress.css" />
 		<link rel="stylesheet" href="assets/css/app.css" />
 		<link rel="stylesheet" href="assets/css/codemirror.css" />
