Logo in landing

--- a/landing/index.html
+++ b/landing/index.html
@@ -86,7 +86,9 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#"></a>
+				<a class="navbar-brand" href="#">
+					<img src="images/logo.png" alt>
+				</a>
 			</div>
 			<!-- NAVIGATION LINKS -->
 			<div class="navbar-collapse collapse" id="kane-navigation">
@@ -108,6 +110,7 @@
 		<div class="only-logo">
 			<div class="navbar">
 				<div class="navbar-header">
+					<img src="images/logo.png" alt>
 				</div>
 			</div>
 		</div>
@@ -633,7 +636,7 @@
 	</div>
 	
 	<!-- LOGO -->
-	<!-- <img src="images/logo.png" alt="LOGO" class="responsive-img"> -->
+	<img src="images/logo.png" alt="LOGO" class="responsive-img">
 	
 	<!-- SOCIAL ICONS -->
 	<ul class="social-icons">
