--- a/landing/index.html
+++ b/landing/index.html
@@ -118,8 +118,14 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="intro-section">
 					<h1 class="intro">Share your clipboard. Paste text or code.</h1>
-					<h5>Available on Web and Cli-Console.</h5>
-					<h5 style="color:#aaaaaa;">Mobile App (Coming soon)</h5>
+					<h5>Available on Web, Mobile and Cli-Console.</h5> 
+
+<!--
+					<a href="http://badge.fury.io/rb/pasting" target="_blank"><img src="https://badge.fury.io/rb/pasting@2x.png" alt="Gem Version" height="18"></a>
+
+					<a href="http://badge.fury.io/js/pasting" target="_blank"><img src="https://badge.fury.io/js/pasting@2x.png" alt="npm version" height="18"></a>
+-->
+
 					<!-- BUTTONS -->
 					<div class="buttons" id="download-button">
 
@@ -413,8 +419,18 @@
 				
 				<div class="subscription-form-container">
 					<h2 class="wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">Pasting for your Console</h2>
+
+
+					<a href="https://rubygems.org/gems/pasting" target="_blank" class="btn btn-default btn-lg standard-button"><i class="icon_desktop"></i>Install via Gem</a>
+
+					<a href="https://www.npmjs.com/package/pasting" target="_blank" class="btn btn-default btn-lg standard-button"><i class="icon_desktop"></i>Install via Npm</a>
+
+					<br>
+
+					<a href="http://badge.fury.io/rb/pasting" target="_blank"><img src="https://badge.fury.io/rb/pasting@2x.png" alt="Gem Version" height="18"></a>
+
+					<a href="http://badge.fury.io/js/pasting" target="_blank"><img src="https://badge.fury.io/js/pasting@2x.png" alt="npm version" height="18"></a>
 			
-					<a href="https://www.npmjs.com/package/pasting" target="_blank" class="btn btn-default btn-lg standard-button"><i class="icon_desktop"></i>Get Pasting Cli</a>
 						
 					</div>	
 				</div>
