--- a/landing/index.html
+++ b/landing/index.html
@@ -421,9 +421,9 @@
 					<h2 class="wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">Pasting for your Console</h2>
 
 
-					<a href="https://rubygems.org/gems/pasting" target="_blank" class="btn btn-default btn-lg standard-button"><i class="icon_desktop"></i>Install via Gem</a>
+					<a href="https://rubygems.org/gems/pasting" target="_blank" class="btn btn-default btn-lg standard-button">Install via Gem</a>
 
-					<a href="https://www.npmjs.com/package/pasting" target="_blank" class="btn btn-default btn-lg standard-button"><i class="icon_desktop"></i>Install via Npm</a>
+					<a href="https://www.npmjs.com/package/pasting" target="_blank" class="btn btn-default btn-lg standard-button">Install via Npm</a>
 
 					<br>
 
