--- a/landing/index.html
+++ b/landing/index.html
@@ -666,10 +666,16 @@
 		<li><a href=""><i class="social_facebook_square"></i></a></li>
 		<li><a href=""><i class="social_googleplus_square"></i></a></li>
 	</ul>
+
 	<!-- COPYRIGHT -->
 	<p class="copyright">
 		©2015 PASTING.IO - <a href="http://represent.io/juansanzone">JS.</a> All Rights Reserved
 	</p>
+
+	<a href="https://mixpanel.com/f/partner" target="_blank">
+		<img width="80px" src="https://cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics">
+	</a>
+
 </div>
 </footer>
 
