New version of higlight code

--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,11 @@
 		<link rel="stylesheet" href="assets/css/vex-theme-default.css" />
 
 		<link rel="stylesheet" href="assets/css/progress.css" />
+
+		<!-- Syntax highlight -->
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/github.min.css">
+
 		<link rel="stylesheet" href="assets/css/app.css" />
-		<link rel="stylesheet" href="assets/css/codemirror.css" />
 
 		<!-- Tracking -->
 		<script type="text/javascript">
@@ -37,6 +40,7 @@
 	<body>
 		<script src="http://underscorejs.org/underscore-min.js"></script>
 		<script src="http://backbonejs.org/backbone-min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
 		<script src="assets/compiled/app.min.js"></script>
 	</body>
 </html>
