--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
 		<script src="http://underscorejs.org/underscore-min.js"></script>
 		<script src="http://backbonejs.org/backbone-min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
+		<script>hljs.initHighlightingOnLoad();</script>
 		<script src="assets/compiled/app.min.js"></script>
 	</body>
 </html>
