fixes box pastes

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,9 @@
 		<!-- Syntax highlight -->
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/github.min.css">
 
+		<!-- Material ripple -->
+		<link rel="import" href="https://www.polymer-project.org/0.5/components/paper-ripple/paper-ripple.html">
+
 		<link rel="stylesheet" href="assets/css/app.css" />
 
 		<!-- Tracking -->
