--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="tbd" />
 		<meta name="keywords" content="tbd" />
+		<meta name="google-site-verification" content="jOq4iZOVdA-T5anb_Akmm-YXJH9fGyDoOJPHimI0lB0" />
 
 		<!--[if lte IE 8]><script src="assets/css/ie/html5shiv.js"></script><![endif]-->
 		<script src="assets/compiled/base.min.js"></script>
