--- a/landing/index.html
+++ b/landing/index.html
@@ -105,6 +105,7 @@
 					<li><a href="#pfeatures">Features</a></li>
 					<li><a href="#viewer">Pasting Viewer</a></li>
 					<li><a href="#cli">Pasting Cli</a></li>
+					<li><a href="https://chrome.google.com/webstore/detail/pasting/eigmjmdnfggdmfkhkiofedljpbcghkgp">Pasting Chrome</a></li>
 					<li><a href="#download">Download</a></li>
 					<li><a href="#signup">SIGN UP</a></li>
 					<li><a href="#" class="pastingLogin">LOGIN</a></li>
