--- a/landing/index.html
+++ b/landing/index.html
@@ -105,7 +105,6 @@
 					<li><a href="#pfeatures">Features</a></li>
 					<li><a href="#viewer">Pasting Viewer</a></li>
 					<li><a href="#cli">Pasting Cli</a></li>
-					<li><a href="https://chrome.google.com/webstore/detail/pasting/eigmjmdnfggdmfkhkiofedljpbcghkgp">Pasting Chrome</a></li>
 					<li><a href="#download">Download</a></li>
 					<li><a href="#signup">SIGN UP</a></li>
 					<li><a href="#" class="pastingLogin">LOGIN</a></li>
@@ -127,7 +126,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="intro-section">
 					<h1 class="intro">Share your clipboard. Paste text or code</h1>
-					<h5>Available on Web, Mobile and Cli-Console</h5> 
+					<h5>Available on Web, Mobile, Chrome Extension and Cli-Console</h5> 
 
 
 <!--
@@ -233,7 +232,7 @@
 				 You can create Pastings directly from your console.
 			</p>
 
-			 <p>Install <a href="#cli"> pasting-cli </a> through gem or npm.  Just thought for nerds. We love the console too. </p>
+			 <p>Install <a href="#cli"> pasting-cli </a>  or <a href="https://chrome.google.com/webstore/detail/pasting/eigmjmdnfggdmfkhkiofedljpbcghkgp">Pasting Extension </a> for Chrome. Just thought for nerds! </p>
 			
 		</div>
 		
