--- a/landing/index.html
+++ b/landing/index.html
@@ -457,15 +457,17 @@
 	<div class="row">
 		<div class="col-md-6 wow fadeInRight animated" data-wow-offset="10" data-wow-duration="1.5s">
 			<div class="video-container">
+			<!--
 				<div class="video">
 					<iframe src="//player.vimeo.com/video/117047798?byline=0&amp;portrait=0&amp;color=ffffff" width="600" height="338" frameborder="0" allowfullscreen>
 					</iframe> 
 				</div>
-				<!--
-				<div class="video">
-					<iframe width="640" height="360" src="http://www.youtube.com/embed/VIDEO_ID?rel=0" frameborder="0" allowfullscreen></iframe>
-				</div>
 				-->
+				<div class="video">
+					<iframe width="600" height="338" src="http://www.youtube.com/embed/hybWBxCoX5g?rel=0" frameborder="0" allowfullscreen>
+						
+					</iframe>
+				</div>
 			</div>
 		</div>
 	
